2002-11-28  Alexandre Duret-Lutz  <adl@gnu.org>

	For PR automake/370:
	* automake.in (handle_languages): Don't prepend $U to $myext
	since handle_single_transform_list now appends it to $obj.
	Process the rule twice to handle deansified files in subdirectories.
	Mark _.c files in subdirectories for cleaning.
	(handle_single_transform_list): Append $U to $obj_sans_ext if
	needed: before this dependencies were output foo.Po instead
	of foo$U.Po.  Don't output explicit dependencies for renamed
	objects or sources in sub-directories: we already output
	a full compile rule for them.
	(lang_c_finish): Don't always use the full filename in the
	.c -> _.c rule.  This reverts part of my change of 2002-11-21.
	* tests/ansi6.test, tests/ansi7.test: Make sure deansified
	files are created in the right directory, and cleaned.
	Reported by Kevin Ryde.

2002-11-25  Jim Meyering  <jim@meyering.net>

	* lib/install-sh: Put `$0:' at the beginning of each diagnostic,
	not `install:'.

2002-11-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (make_condition_string): New function.
	(cond_stack_if, cond_stack_else, cond_stack_endif): Use it.
	Suggested by Raja R Harinath.

	* tests/texinfo13.test: Require texi2dvi-o.
	* tests/defs.in: Handle required=texi2dvi-o.

	* automake.in (lang_c_finish): Use $@ in the .c -> _.c rule.

	* automake.in (handle_single_transform_list): Don't strip the
	directory from $full_ansi.  This reverts my patch of 2002-10-16.
	(lang_c_finish): Use the full filename, including the directory,
	in the .c -> _.c rule.  These two files must reside in the same
	directory.
	* tests/ansi6.test: Also try to compile without ansi2knr.
	Reported by Andreas Schwab

2002-11-20  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Conditional.pm (strip): New function.
	* lib/Automake/ConditionalSet.pm (sub_conditions): Use it.
	Suggested by Raja R Harinath.

	* automake.in (conditional_ambiguous_p, macro_define, rule_define,