@@ -47,6 +47,7 @@ Derek R. Price		derek.price@openavenue.com
 Dieter Baron		dillo@stieltjes.smc.univie.ac.at
 Dmitry Mikhin		dmitrym@acres.com.au
 Doug Evans		devans@cygnus.com
+Duncan Gibson		duncan@thermal.esa.int
 Eleftherios Gkioulekas	lf@amath.washington.edu
 Elrond			Elrond@Wunder-Nett.org
 Enrico Scholz		enrico.scholz@informatik.tu-chemnitz.de
