@@ -387,6 +387,7 @@ suffix7.test \
 suffix8.test \
 suffix9.test \
 suffix10.test \
+suffix11.test \
 symlink.test \
 symlink2.test \
 symlink3.test \
